# ustc-iwan-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: appimage.yml  build.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: iwan.rs  main.rs  proxy.rs  service.rs
